tests/api/reference/negative/02-missing-return.asm
fn invalid() -> u64 {
    const value = 1
}

const result = invalid()
